--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 .gradle
 .gradle/
 build/
+gradle/
+gradlew
+gradlew.bat
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
